chore: 初始化 BempDiff 桌面应用工程并迁移原型代码
- 从 prototype 目录迁移核心 Java 后端、前端资源、打包配置至 bempdiff 目录
- 新增 Tauri 2.x 桌面壳配置与图标资源
- 搭建 Vue3 + Vite 前端开发环境
- 新增测试用例与验证脚本工具
- 清理废弃的 prototype 目录遗留文件与构建配置